--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
   src: url("./assets/fonts/Windows-Regular.ttf");
 }
 
+html {
+  font-size: 18px;
+}
+
 * {
   font-family: windowsRegular;
   letter-spacing: 0.2ch;
@@ -18,6 +22,12 @@ main section {
 html,
 body {
   margin: 0;
+}
+
+h3 {
+  padding: 0;
+  font-weight: bold;
+  font-size: 2rem;
 }
 
 header {
@@ -49,4 +59,13 @@ header {
 
 .flip-horizontal {
   transform: scaleX(-1);
+}
+
+q::before,
+q::after {
+  display: inline-block;
+}
+
+q {
+  quotes: "“" "”" "‘" "’" "“" "”";
 }
